<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:background="@drawable/wall_about">
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:orientation="vertical" android:background="#55000000">
        <TextView android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="fill_parent" android:gravity="center" android:layout_width="fill_parent" android:textSize="20sp" android:text="@string/methodTitle"></TextView>
        <TextView android:paddingTop="10dp" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_width="wrap_content" android:gravity="center" android:id="@+id/textView2" android:textSize="15sp" android:text="@string/methodSubTitle" android:textColor="#FFFFFF" android:paddingBottom="10dp"></TextView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/headphones" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/headPhonesStep1"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rainycloud" android:background="#ffffff"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clickToRain"
                android:textAppearance="?android:attr/textAppearanceMedium" android:paddingLeft="5sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical|left" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:src="@drawable/checked" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getItDone"
                android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="30sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20sp" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/naturalSounds"
                android:textAppearance="?android:attr/textAppearanceMedium" android:gravity="center" android:textSize="15sp"/>
        </LinearLayout>

    </LinearLayout>
    
</LinearLayout>
