<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:background="@drawable/wall_about">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#55000000"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About"
            android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="30sp" android:paddingBottom="20sp"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/getFocusedApp"
            android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="15sp"/>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutApp" android:textColor="#ffffff" android:textSize="10sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textAppearance="?android:attr/textAppearanceLarge" android:paddingTop="3sp" android:textSize="15sp"/>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="64dp"
                android:layout_height="87dp"
                android:src="@drawable/pablo" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pablo Fernandes"
                    android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="#ffffff"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Twitter: @_PabloFernandes" android:textColor="#ffffff"/>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Send issues to pabluez@gmail.com" android:textColor="#ffffff"/>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/brazilflag" android:padding="5sp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:textAppearance="?android:attr/textAppearanceLarge" android:paddingTop="3sp" android:textSize="15sp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/creditsText" android:textColor="#ffffff" android:paddingBottom="20sp" android:textSize="10sp"/>

        <Button
            android:id="@+id/buttonAbout"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/aboutMethod" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Offline mode, Adfree and no blank spaces of sound"
            android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="10sp"/>

    </LinearLayout>
    
</LinearLayout>
