<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wall"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/hello"
            android:textColor="#000000"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#55000000"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:weightSum="1" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:text="@string/rain_now"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp" />

            <ToggleButton
                android:id="@+id/toggleRain"
                android:layout_width="131dp"
                android:layout_height="131dp"
                android:background="@drawable/playbutton"
                android:checked="false"
                android:gravity="center"
                android:textOff=" "
                android:textOn=" " />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#55ffa4a6"
            android:gravity="right" >

            <Button
                android:id="@+id/buttonLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#55ffa4a6"
                android:padding="4dp"
                android:text="@string/offlineVersion"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#55ffa4a6"
                android:text="|"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <Button
                android:id="@+id/buttonMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#55ffa4a6"
                android:padding="4dp"
                android:textSize="18sp" android:text="@string/theMethodTextButton"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#55ffa4a6"
                android:text="|"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <Button
                android:id="@+id/buttonAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#55ffa4a6"
                android:padding="4dp"
                android:paddingRight="4dp"
                android:textSize="18sp" android:text="@string/aboutButtonText"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
